fixed login page alignment

--- a/Frontend/src/components/SIgnIn/Login.css
+++ b/Frontend/src/components/SIgnIn/Login.css
@@ -1,68 +1,78 @@
-.login{
-    height: 100vh;
-    background-image: linear-gradient(to right,#ebfaef,#7ff087);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 0.5vmax;
-    box-sizing: border-box;
+.login {
+  height: 100vh;
+  background-image: linear-gradient(to right, #ebfaef, #7ff087);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0.5vmax;
+  box-sizing: border-box;
 }
-.loginForm{
-    background-color: white;
-    height: 85%;
-    width: 50%;
-    box-sizing: border-box;
-    border-radius: 5px;
-    padding: 2vmax;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    box-shadow: 10px 12px 10px gray;
+.loginForm {
+  background-color: white;
+  height: 85%;
+  width: 50%;
+  box-sizing: border-box;
+  border-radius: 5px;
+  padding: 2vmax;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  box-shadow: 10px 12px 10px gray;
 }
-.loginForm >input{
-    box-sizing: border-box;
-    padding: 1vmax 2vmax;
-    width: 80%;
-    border-radius: 40px;
-    border: 1px solid #ccc;
-    margin: 2vmax;
-    font:100 1.2rem "Roboto",sans-serif;
-    outline: none;
+.block {
+  display: flex;
+  padding-top: 100px;
+  flex-direction: column;
+  width: auto;
+  height: auto;
+  justify-content: center;
+}
+.loginForm > button {
+  margin-top: 17px;
+}
+.loginForm > .block > input {
+  padding: 1vmax 2vmax;
+  margin-top: 30px;
+  width: 80%;
+  border-radius: 40px;
+  border: 1px solid #ccc;
+  font: 100 1.2rem "Roboto", sans-serif;
+  outline: none;
 }
 .loginForm > a {
-    align-self: flex-end;
-    text-decoration: none;
-    color: rgba(0, 0, 0, 0.342);
-    margin:2vmax;
+  align-self: flex-end;
+  text-decoration: none;
+  color: rgba(0, 0, 0, 0.342);
+  margin: 2vmax;
 }
 .loginForm > a {
-    align-self: flex-end;
-    text-decoration: none;
-    color: rgba(0, 0, 0, 0.342);
-    margin:2vmax;
+  align-self: flex-end;
+  text-decoration: none;
+  color: rgba(0, 0, 0, 0.342);
+  margin: 2vmax;
 }
-.loginForm > img{
-    height: 200px;
-    width: 300px;
+.loginForm > img {
+  height: 200px;
+  width: 300px;
 }
 @media screen and (max-width: 960px) {
-    .loginForm{
-        width: 70%;
-        height: 80%;
-    }
-    .loginForm > input{
-        padding: 4vw 6vw;
-        font: 100 1.2rem "Roboto",sans-serif;
-        margin: 2vw;
-    }
+  .loginForm {
+    width: 70%;
+    height: 80%;
+  }
+  .loginForm > input {
+    padding: 4vw 6vw;
+    font: 100 1.2rem "Roboto", sans-serif;
+    margin: 2vw;
+  }
 }
 @media screen and (max-width: 600px) {
-    .loginForm{
-        width: 100%;
-        height: 70%;
-    }
-    .loginForm > a{
-        align-self: center;
-        margin: 3vmax;
-    }
+  .loginForm {
+    width: 100%;
+    height: 70%;
+  }
+  .loginForm > a {
+    align-self: center;
+    margin: 3vmax;
+  }
 }
